@@ -6,12 +6,13 @@
 
   :min-lein-version "2.7.1"
 
-  :dependencies [[org.clojure/clojure "1.9.0-beta2"]
+  :dependencies [[org.clojure/clojure "1.9.0-beta3"]
                  [org.clojure/clojurescript "1.9.946"]
                  [org.clojure/core.async  "0.3.443"
                   :exclusions [org.clojure/tools.reader]]
+                 [org.clojure/core.logic "0.8.11"]
                  [org.clojars.ghaskins/protobuf "3.3.1-1"]
-                 [aleph "0.4.4-alpha4"]
+                 [aleph "0.4.4"]
                  [im.chit/lucid.mind "1.3.13"]
                  [instaparse "1.4.7"]
                  [org.clojure/test.check "0.10.0-alpha2"]
@@ -22,20 +23,25 @@
                  [com.cognitect/transit-cljs "0.8.239"]
                  [cljs-ajax "0.7.2"]
                  [yada "1.2.9" :exclusions [[aleph]]]
+                 [manifold "0.1.7-alpha5"]
                  [byte-streams "0.2.4-alpha3"]
                  [cljsjs/d3 "4.3.0-5"]
-                 [specviz "0.2.4"]
-                 [rhizome "0.2.9"]
                  [thinktopic/cortex "0.9.22"]
                  [com.taoensso/nippy "2.14.0-alpha1"]
-                 [environ "1.1.0"]]
+                 [environ "1.1.0"]
+                 [datascript "0.16.2"]
+                 [net.mikera/telegenic "0.0.1"]
+                 [thinktopic/think.image "0.4.17-SNAPSHOT"]]
 
   :plugins [[lein-figwheel "0.5.12"]
             [lein-cljsbuild "1.1.7" :exclusions [[org.clojure/clojure]]]
-            [lein-environ "1.1.0"]]
+            [lein-environ "1.1.0"]
+            [lein-jupyter "0.1.8"]]
 
   :java-source-paths ["SC2APIProtocol"]
-  :source-paths ["src/cljsc2/clj/" "src/cljsc2/cljc/"]
+
+  :jvm-opts ["--add-modules" "java.xml.bind"]
+
   :cljsbuild {:builds
               [{:id "dev"
                 :source-paths ["src/cljsc2/cljs"]
@@ -113,14 +119,12 @@
   ;; Please see:
   ;; https://github.com/bhauman/lein-figwheel/wiki/Using-the-Figwheel-REPL-within-NRepl
   :profiles {:dev {:env {:proto-grammar "resources/proto.ebnf"
-                         :proto-dir "resources/proto/"}
+                         :proto-dir "resources/s2clientprotocol/"}
                    :dependencies [[binaryage/devtools "0.9.4"]
                                   [figwheel-sidecar "0.5.12"]
                                   [com.cemerick/piggieback "0.2.2"]]
                    ;; need to add dev source path here to get user.clj loaded
                    :source-paths ["src/cljsc2/cljs"
-                                  "src/cljsc2/clj"
-                                  "src/cljsc2/cljc"
                                   "dev"]
                    ;; for CIDER
                    ;; :plugins [[cider/cider-nrepl "0.12.0"]]
